[gd_scene load_steps=23 format=3 uid="uid://potr8w0bcnms"]

[ext_resource type="Script" uid="uid://csmm610debe2l" path="res://block.gd" id="1_036b0"]
[ext_resource type="Texture2D" uid="uid://dekegrssob2yl" path="res://Stone.png" id="1_dwbse"]
[ext_resource type="PackedScene" uid="uid://2go8h24o332j" path="res://player.tscn" id="1_n0l67"]
[ext_resource type="Script" uid="uid://buj2mvnr51fo0" path="res://world.gd" id="1_pkg7o"]
[ext_resource type="PackedScene" uid="uid://c148d14s7v1ey" path="res://enemy.tscn" id="2_kofwd"]
[ext_resource type="Texture2D" uid="uid://coi4ycgmixyw6" path="res://Sprites/Gravestone.png" id="8_gbfbk"]
[ext_resource type="AudioStream" uid="uid://do4p2dgestwj2" path="res://Songs/Enter Annihilation.mp3" id="9_ic0uy"]
[ext_resource type="Script" uid="uid://du0r1u5n8pfpu" path="res://horde_2_timer.gd" id="9_ioo17"]
[ext_resource type="AudioStream" uid="uid://bif05s1eb4uto" path="res://Songs/Neverless.wav" id="10_k3n1d"]
[ext_resource type="AudioStream" uid="uid://drb6bcwy0meqa" path="res://Songs/At Death's Door.wav" id="10_wse8f"]
[ext_resource type="AudioStream" uid="uid://c6hmh0yhwe5dm" path="res://Songs/This Dread.mp3" id="11_2o6r5"]
[ext_resource type="PackedScene" uid="uid://cov64dleb2u4q" path="res://pause_menu.tscn" id="12_k3n1d"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qxgmw"]
albedo_color = Color(0.0862745, 0.329412, 0.160784, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_pw2v5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_aqk2v"]
size = Vector3(2, 1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_54xf7"]
albedo_color = Color(0.0988, 0.13, 0.10608, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k3n1d"]
albedo_color = Color(0.755386, 0.755386, 0.755386, 1)
albedo_texture = ExtResource("1_dwbse")
albedo_texture_force_srgb = true

[sub_resource type="BoxMesh" id="BoxMesh_y2ikd"]
material = SubResource("StandardMaterial3D_k3n1d")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_5lueg"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_wse8f"]
sky_top_color = Color(0.281699, 0.216928, 0.510277, 1)
sky_horizon_color = Color(0.306993, 0.0136764, 0.183926, 1)
sky_cover_modulate = Color(0.1, 0.1, 0.1, 1)
ground_bottom_color = Color(0.141176, 0.305882, 0.223529, 1)
ground_horizon_color = Color(0.111478, 0.264589, 0.191556, 1)
sun_angle_max = 6.95
sun_curve = 0.3

[sub_resource type="Sky" id="Sky_2o6r5"]
sky_material = SubResource("ProceduralSkyMaterial_wse8f")

[sub_resource type="Environment" id="Environment_2bx7j"]
background_mode = 2
background_color = Color(0.643137, 0.643137, 0.643137, 1)
sky = SubResource("Sky_2o6r5")
fog_enabled = true
fog_sky_affect = 0.1
fog_height = -1.5
fog_height_density = -0.03

[node name="World" type="Node3D"]
script = ExtResource("1_pkg7o")

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(27.5909, 0, 0, 0, 1, 0, 0, 0, 21.6831, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_qxgmw")
mesh = SubResource("PlaneMesh_pw2v5")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Ground/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_aqk2v")

[node name="Block" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1.39673, -1.21612, 0, 0.37399, 4.54178, 0, 0, 0, 1.32646, 11.0266, 1.98777, 4.04272)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")
script = ExtResource("1_036b0")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block4" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1.88343, 2.18755, -0.00786672, -0.672756, 6.12401, 0.00612917, 0.0103272, -0.0110832, 1.83397, -8.91255, 1.48253, 8.11031)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block4/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block3" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(2.46, 0, 0, 0, 8, 0, 0, 0, 2.256, 0.91892, 3.71408, -8.10477)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block9" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(61.1064, 0, 0, 0, 5.04, 0, 0, 0, 0.2256, 0.91892, 1.71408, -21.1048)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block9"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block9/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block10" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(61.1064, 0, 0, 0, 5.04, 0, 0, 0, 0.2256, 0.91892, 1.71408, 21.8952)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block10"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block10/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block11" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(-2.67105e-06, 0, -0.2256, 0, 5.04, 0, 61.1064, 0, -9.86128e-09, 27.9189, 1.71408, -3.10477)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block11"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block11/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block12" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(-2.67105e-06, 0, -0.2256, 0, 5.04, 0, 61.1064, 0, -9.86128e-09, -27.0811, 1.71408, -3.10477)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block12"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block12/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block6" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(2.46, 0, 0, 0, 8, 0, 0, 0, 2.256, -17.4101, 3.71408, -3.49061)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block6/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block7" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(2.46, 0, 0, 0, 8, 0, 0, 0, 2.256, 19.8206, 1.64026, -10.9213)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block7/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block8" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(2.46, 0, 0, 0, 8, 0, 0, 0, 2.256, -14.759, 1.64026, 15.1141)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block8"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block8/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="Block5" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(2.46, 0, 0, 0, 7.2587, 0.948428, 0, -3.36322, 2.04695, 0.91892, 2.27838, 15.6548)
material_override = SubResource("StandardMaterial3D_54xf7")
mesh = SubResource("BoxMesh_y2ikd")

[node name="StaticBody3D" type="StaticBody3D" parent="Environment/Block5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Block5/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_5lueg")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2bx7j")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.810512, 0.337002, -0.479061, 0, 0.817899, 0.575362, 0.585722, -0.466338, 0.662917, 0, 8.42502, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_n0l67")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11.86)

[node name="Enemy" parent="." instance=ExtResource("2_kofwd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.9993, 0, -4)

[node name="Enemy2" parent="." instance=ExtResource("2_kofwd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.6375, 0, -5.88845)

[node name="Enemy3" parent="." instance=ExtResource("2_kofwd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.0379, 0, 16.6275)

[node name="Enemy4" parent="." instance=ExtResource("2_kofwd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61182, 0, -10.2664)

[node name="Enemy5" parent="." instance=ExtResource("2_kofwd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0119171, 0, -3.27769)

[node name="enemytimeout" type="Timer" parent="."]
wait_time = 0.999
autostart = true

[node name="boomertimeout" type="Timer" parent="."]
wait_time = 8.0

[node name="sprinterspawn" type="Timer" parent="."]
wait_time = 3.0

[node name="Grave" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.741787, -5.52887)
billboard = 2
texture = ExtResource("8_gbfbk")

[node name="Grave2" type="Sprite3D" parent="."]
transform = Transform3D(0.2706, 0, 0.962692, 0, 1, 0, -0.962692, 0, 0.2706, -6.95087, 0.741787, 6.83711)
billboard = 2
texture = ExtResource("8_gbfbk")

[node name="Grave3" type="Sprite3D" parent="."]
transform = Transform3D(0.987485, 0, 0.15771, 0, 1, 0, -0.15771, 0, 0.987485, -15.5365, 0.741787, 0.804596)
billboard = 2
texture = ExtResource("8_gbfbk")

[node name="Grave4" type="Sprite3D" parent="."]
transform = Transform3D(-0.332918, 0, -0.942956, 0, 1, 0, 0.942956, 0, -0.332918, 12.9275, 0.741787, 0.804596)
billboard = 2
texture = ExtResource("8_gbfbk")

[node name="Grave5" type="Sprite3D" parent="."]
transform = Transform3D(-0.332918, 0, -0.942956, 0, 1, 0, 0.942956, 0, -0.332918, 4.75486, 0.741787, 12.4954)
billboard = 2
texture = ExtResource("8_gbfbk")

[node name="Horde 2 timer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true
autostart = true
script = ExtResource("9_ioo17")

[node name="Horde 3 timer" type="Timer" parent="."]
wait_time = 130.0
one_shot = true
autostart = true
script = ExtResource("9_ioo17")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.10093, 0, 0, 0, 1, 0, 0.700393, 0)
stream = ExtResource("10_wse8f")
attenuation_model = 2
volume_db = 17.0
playback_type = 1
emission_angle_degrees = 90.0
doppler_tracking = 1

[node name="Enter Annihilation" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.10093, 0, 0, 0, 1, 0, 0.700393, 0)
stream = ExtResource("9_ic0uy")
attenuation_model = 2
volume_db = 17.0
playback_type = 1
emission_angle_degrees = 90.0
doppler_tracking = 1

[node name="Neverless" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.10093, 0, 0, 0, 1, 0, 0.700393, 0)
stream = ExtResource("10_k3n1d")
attenuation_model = 2
volume_db = 17.0
playback_type = 1
emission_angle_degrees = 90.0
doppler_tracking = 1

[node name="This Dread" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.10093, 0, 0, 0, 1, 0, 0.700393, 0)
stream = ExtResource("11_2o6r5")
attenuation_model = 2
volume_db = 17.0
playback_type = 1
emission_angle_degrees = 90.0
doppler_tracking = 1

[node name="Impspawn" type="Timer" parent="."]
wait_time = 8.0

[node name="Horde 1 timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Horde 1_5 timer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true
autostart = true

[node name="witchspawntimer" type="Timer" parent="."]
wait_time = 165.0
autostart = true

[node name="Pause Menu" parent="." instance=ExtResource("12_k3n1d")]
visible = false
offset_left = 361.0
offset_top = 201.0
offset_right = 361.0
offset_bottom = 201.0
scale = Vector2(1.96378, 3.50214)

[node name="healspirit-timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="timeout" from="enemytimeout" to="Player" method="_on_enemytimeout_timeout"]
[connection signal="timeout" from="boomertimeout" to="Player" method="_on_boomertimeout_timeout"]
[connection signal="timeout" from="sprinterspawn" to="Player" method="_on_sprinterspawn_timeout"]
[connection signal="timeout" from="Horde 2 timer" to="Player" method="_on_horde_2_timer_timeout"]
[connection signal="timeout" from="Horde 3 timer" to="Player" method="_on_horde_3_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_audio_stream_player_3d_finished"]
[connection signal="finished" from="Neverless" to="." method="_on_neverless_finished"]
[connection signal="finished" from="This Dread" to="." method="_on_this_dread_finished"]
[connection signal="timeout" from="Impspawn" to="." method="_on_impspawn_timeout"]
[connection signal="timeout" from="Horde 1 timer" to="Player" method="_on_horde_1_timer_timeout"]
[connection signal="timeout" from="Horde 1_5 timer" to="Player" method="_on_horde_1_5_timer_timeout"]
[connection signal="timeout" from="witchspawntimer" to="Player" method="_on_witchspawntimer_timeout"]
[connection signal="timeout" from="healspirit-timer" to="Player" method="_on_healspirittimer_timeout"]
